--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -12,7 +12,7 @@ header{
             text-decoration: none;
         }
     }
-    img{
+    .container img{
         width: 80px;
         height: 80px;
     }
