show comics with index

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -10,6 +10,7 @@ header{
         list-style: none;
         a{
             text-decoration: none;
+            color: #303030;
         }
     }
     .container img{
